# 3sem_3laba

./: CMakeLists.txt
graphics/: benchSearch.txt  bench_search.txt  graphics.py
graphs/: colours.txt  graph_test.gv  graph_vis.gv
src/: graph.hpp  main.cpp  paint.hpp  vertex.hpp
test/: tests.cpp
